# board_check

./: CMakeLists.txt  README.md  config.ini
calib/: CMakeLists.txt  VID5.xml  camera_calibration.cpp  capture.py  readme  test.py  test_cali.py
calib/undistort_cam/: CMakeLists.txt  CMakeLists.txt~  use_cali.py
calibration/: calc_dist.py  calib_store.py  in_VID5.xml  readme  readme.txt  rectify.py  single_calib.py  test_vecs.py  undistort_cam.cpp
calibration/scrips/: rectify_with_CamMatri_Dis.py  undistort_cam_image.py  use_cali.py
capture/: detect_corners.h  main.cpp
common/: callback.cpp  callback.h  ffmpeg.cpp  ffmpeg.h
src/: config.cpp  config.h  detect_corners.cpp  draw_ui.cpp  draw_ui.h  line_linear.cpp  line_linear.h  main.cpp  params.h  utf8_to_unicode.py
test/: cam_calib.yml
