set(OpenCV_DIR "/home/westwell/opencv-2.4.13/release")
cmake_minimum_required(VERSION 2.8)
project( calibpro )
find_package( OpenCV REQUIRED )
find_package(PythonInterp)
find_package(PythonLibs)
include_directories( ${OpenCV_INCLUDE_DIRS}
	/home/westwell/Desktop/calibration_opencv )
#add_executable( calibpro camera_calibration.cpp )
PYTHON_ADD_MODULE(calibpro camera_calibration.cpp)
target_link_libraries( calibpro ${OpenCV_LIBS} )
