set(OpenCV_DIR "/home/westwell/opencv-2.4.13/release")
cmake_minimum_required(VERSION 2.8)
project( use_calibpro )
find_package( OpenCV REQUIRED )
find_package(PythonInterp)
find_package(PythonLibs)
include_directories( ${OpenCV_INCLUDE_DIRS}
	/cv/cindy/my-save-function/function/camera_calibration/calibration/calibration/undistort_cam )
PYTHON_ADD_MODULE(use_calibpro undistort_cam.cpp)
target_link_libraries( use_calibpro ${OpenCV_LIBS} )
